# personal-db

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  install.sh  package-lock.json  package.json  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: ci.yml
docs/: cloud-personal-db.md  creating-trackers.md  data-contract.md  evolved-tracker-yaml.md  ux-roadmap.md
docs/demos/: install-demo.tape  setup-demo.tape  setup-picker.tape
docs/superpowers/plans/: 2026-04-25-personal-db-v0.md  2026-04-26-tracker-setup-wizard.md  2026-04-28-tracker-transforms.md  2026-05-04-granola-tracker.md  2026-05-04-sync-daemon.md  2026-05-09-code-agent-activity-tracker.md  2026-05-09-withings-tracker.md  2026-05-10-code-agent-merge.md
docs/superpowers/specs/: 2026-04-25-personal-db-v0-design.md  2026-04-26-tracker-setup-wizard-design.md  2026-04-28-tracker-transforms-design.md  2026-05-02-granola-tracker-design.md  2026-05-04-sync-daemon-design.md  2026-05-09-code-agent-activity-tracker-design.md  2026-05-09-withings-tracker-design.md  2026-05-10-code-agent-merge-design.md  2026-05-30-app-system-design.md
packaging/: README.md  build-dmg.sh  entitlements.plist  freeze-daemon.sh  release.sh  setup-updater-keychain.sh  sign-and-notarize.sh
packaging/cli/: personal-db
packaging/smappservice/: RegisterAgent.swift  com.personal_db.daemon.plist
scripts/: build-ui.mjs  install_dev.sh  sync-version.py
scripts/git-hooks/: post-commit
shell/: README.md  package-lock.json  package.json
shell/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
shell/src-tauri/capabilities/: default.json  remote-settings.json
shell/src-tauri/icons/: icon.icns
shell/src-tauri/src/: cli_install.rs  daemon.rs  main.rs  mcp_connect.rs  onboarding.rs  updater.rs
shell/web/: daemon-down.html  index.html  version-mismatch.html
src/personal_db/: __main__.py  app_names.py  apps.py  backfill.py  config.py  data_horizon.py  db.py  entities.py  handle_norm.py  ingest_utils.py  installer.py  log_event.py  manifest.py  migrations.py  notes.py  oauth.py  permissions.py  scheduler.py  sources.py  sync.py  tracker.py  transforms.py  viz_helpers.py
src/personal_db/browser_extension/: README.md  __init__.py
src/personal_db/browser_extension/bridge/: __init__.py  catalog.py  host.py  (+1 more)
src/personal_db/cli/: _deprecated.py  app_cmd.py  browser_cmd.py  code_agent_hook_cmd.py  context_cmd.py  contract_cmd.py  daemon_cmd.py  enrich_cmd.py  init_cmd.py  log_cmd.py  main.py  mcp_cmd.py  permission_cmd.py  query_cmd.py  scheduler_cmd.py  setup_cmd.py  source_cmd.py  state.py  status_cmd.py  sync_cmd.py  tracker_cmd.py  ui_cmd.py  worker_cmd.py
src/personal_db/context_providers/: __init__.py  base.py  email.py
src/personal_db/core/: action_log.py  app_names.py  apps.py  background_jobs.py  browser_bridge.py  config.py  contract.py  daemon_token.py  data_horizon.py  db.py  enrichment_queue.py  entities.py  entrypoints.py  global_writes.py  ingest_utils.py  installer.py  intervals.py  log_event.py  manifest.py  mcp_registry.py  migrations.py  notes.py  oauth.py  pack_deps.py  providers.py  runtime_env.py  scaffold.py  sources.py  sync.py  sync_backoff.py  tracker.py  transforms.py  validation.py  viz_helpers.py
src/personal_db/daemon/: _locks.py  agent_terminal.py  client.py  http.py  install.py  server.py
src/personal_db/enrichments/: __init__.py  agent.py  core.py  finance.py
src/personal_db/interfaces/: README.md  __init__.py  email_context.py
src/personal_db/mcp_server/: server.py  tools.py
src/personal_db/remote_sources/: __init__.py  base.py  spark.py
src/personal_db/services/: backfill.py
src/personal_db/ui/: agcharts.py  aggrid.py  builtin_viz.py  charts.py  components.py  menubar.py  server.py  setup_runner.py  viz.py
src/personal_db/wizard/: env_file.py  mcp_setup.py  menu.py  runner.py  status.py  steps.py
src/personal_db/worker/: __init__.py  enrich.py  install.py
tests/: _agent_terminal_helpers.py  _daemon_auth.py  _validation_helpers.py  _wheel_fixture_helpers.py  conftest.py
tests/fixtures/: manifest_invalid_step_type.yaml  manifest_missing_time_column.yaml  manifest_valid.yaml
tests/fixtures/github/: commits_page1.json  commits_repo1.json  commits_repo2.json  repos.json
tests/fixtures/imessage/: chat_mini.sqlite
tests/fixtures/screen_time/: knowledgeC_mini.sqlite
tests/fixtures/whoop/: cycles.json  recovery.json  sleep.json  workouts.json
tests/integration/: test_cli_app.py  test_cli_init.py  test_cli_setup.py  test_cli_source.py  test_cli_sync.py  test_cli_tracker.py  test_connector_chrome_history.py  test_connector_claude_conversations.py  test_connector_code_agent_activity.py  test_connector_codex_conversations.py  test_connector_contacts.py  test_connector_daily_time_accounting.py  test_connector_github.py  test_connector_habits.py  test_connector_imessage.py  test_connector_mosspath_lite.py  test_connector_project_time.py  test_connector_screen_time.py  test_connector_whoop.py  test_e2e_smoke.py  test_mcp_server.py  test_wizard_runner.py
tests/unit/: test_action_log.py  test_agent_terminal_gate.py  test_api_versioning.py  test_app_cmd_deps.py  test_app_metrics.py  test_app_names.py  test_apps.py  test_backfill_async.py  test_background_jobs.py  test_browser_bridge.py  test_browser_extension_bridge.py  test_calendar_tracker.py  test_cli_activates_lib_dir.py  test_cli_main_structure.py  test_cli_sync_cmd.py  test_code_agent_actions.py  test_code_agent_hook_writer.py  test_code_agent_ingest.py  test_code_agent_intervals.py  test_code_agent_migration.py  test_code_agent_parsers.py  test_code_agent_sessions.py  test_config.py  test_context_email.py  test_contract.py  test_crypto_wallet_tracker.py  test_daemon_actions_endpoint.py  test_daemon_admin_routes.py  test_daemon_auth.py  test_daemon_client.py  test_daemon_cmd.py  test_daemon_install.py  test_daemon_locks.py  test_daemon_routes.py  test_daemon_server.py  test_dashboard_api.py  test_data_browser.py  test_data_horizon.py  test_db.py  test_dotenv_loading.py  (+72 more)
tests/unit/fixtures/: codex_rollout_minimal.jsonl
(+279 files in other folders)
