[project]
name = "personal_db"
version = "0.1.7"
description = "Personal data layer for AI agents"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "questionary>=2.0",
  "requests>=2.31",
  "mcp>=1.0",
  "rumps>=0.4.0; sys_platform == 'darwin'",
  "fastapi>=0.100",
  "uvicorn>=0.20",
  "jinja2>=3.0",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4", "pyright>=1.1", "import-linter>=2.0"]
# Finance app's LLM agent harness (enrichments/agent.py). Core does not
# depend on this; enrichments/agent.py raises a clear pip-install hint if
# it's missing.
finance = ["openai-agents>=0.17.4"]
# xhs/xhs_saved trackers decrypt Chrome's local-state key to read cookies.
# Core does not depend on this; the trackers' ingest.py raise a clear
# pip-install hint at sync time if it's missing.
xhs = ["cryptography>=47.0"]

[project.scripts]
personal-db = "personal_db.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
include = ["src"]
# Without this, pyright fails to auto-detect the project's venv/Python
# version and misreports hundreds of spurious errors (e.g. "Alternative
# syntax for unions requires Python 3.10 or newer" against `X | Y` syntax
# this project uses everywhere, and unresolved imports for dependencies that
# are in fact installed) -- see CI workflow comment for the current
# non-spurious error count.
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"

[tool.importlinter]
root_packages = ["personal_db"]

[[tool.importlinter.contracts]]
name = "Layered architecture: cli -> services -> ui -> core -> interfaces"
type = "layers"
containers = ["personal_db"]
layers = [
  "cli",
  "services",
  "ui",
  "core",
  "interfaces",
]
ignore_imports = [
  # Backward-compat shim only: personal_db.ui.viz re-exports the service module
  # for an in-flight test file we cannot edit. Internal code must import
  # personal_db.services.ui.viz directly. Shim (and this ignore) drop later.
  "personal_db.ui.viz -> personal_db.services.ui.viz",
]

[[tool.importlinter.contracts]]
name = "Services depend only on core/interfaces, never extension concretes"
type = "forbidden"
source_modules = [
  "personal_db.services",
  "personal_db.ui",
]
forbidden_modules = [
  "personal_db.enrichments",
  "personal_db.context_providers",
  "personal_db.remote_sources",
]
ignore_imports = [
  # The one narrow, intentional bridge: core.providers resolves the built-in
  # "spark_email" provider name by lazily importing context_providers.email
  # inside a function body (see core/providers.py docstring for why this is
  # the chosen design over self-registration, instead of the provider
  # self-registering). services/ui reach context_providers only through this
  # one edge (services -> core.providers -> context_providers.email), which
  # import-linter's forbidden contract otherwise flags transitively; ignoring
  # the single direct edge below removes it from the whole contract's graph.
  "personal_db.core.providers -> personal_db.context_providers.email",
]

[tool.hatch.build.targets.wheel]
packages = ["src/personal_db"]
include = [
  "src/personal_db/templates/**/*",
  "src/personal_db/services/mcp_server/prompts/*.md",
  "src/personal_db/ui/templates/**/*",
  "src/personal_db/ui/static/**/*",
]
